--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - assets/Online-Groceries-pana.png
     - assets/In-no-time-cuate.png
     - assets/Producto.png
+    - assets/restaurant-breakfast.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
