--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_splash_screen: ^3.0.0
   another_flutter_splash_screen: ^1.2.0
+  flutter_advanced_drawer: ^1.3.6
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +79,7 @@ flutter:
     - assets/In-no-time-cuate.png
     - assets/Producto.png
     - assets/restaurant-breakfast.jpg
+    - assets/hamburger-and-fries.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
