--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   another_flutter_splash_screen: ^1.2.0
   flutter_advanced_drawer: ^1.3.6
   http: ^1.2.1
+  app_bar_search: ^1.0.5
+  anim_search_bar: ^2.0.3
 
 dev_dependencies:
   flutter_test:
