--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   http: ^1.2.1
   app_bar_search: ^1.0.5
   anim_search_bar: ^2.0.3
+  scroll_to_index: ^3.0.1
 
 dev_dependencies:
   flutter_test:
