--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   app_bar_search: ^1.0.5
   anim_search_bar: ^2.0.3
   scroll_to_index: ^3.0.1
+  skeletonizer: ^1.1.2+1
 
 dev_dependencies:
   flutter_test:
