--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   anim_search_bar: ^2.0.3
   scroll_to_index: ^3.0.1
   skeletonizer: ^1.1.2+1
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
